styles.css
*, html  {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
}

div  {
    margin: 0;
    padding: 0;
    box-sizing:  border-box;
}

a {
    text-decoration: none;
    font-weight: 600;
    color: white;
}

/* 

Color  Naranjo : #ef782d
Color Rosa: #d94285
*/

/* SECCION CLASESSS */

.flex {
    display: flex;
    align-items: center;
    padding-bottom: 20px;
}

.flex-center {
    display: flex;
    justify-content: center;
}

.absolute {
    position: absolute;
    left: 3%;
}

.links-nav {
    padding-top: 50px;
}

.flex-end {
    display: flex;
    justify-content: end;
}

.center-aling {
    align-items: center;
}

.nav-bar {
    width: 100%;
    height: 120px;
    background-color: rgba(255, 255, 255, 0.87);
}

.logo {
   height: 120px;
   max-height: 120px;
   width: 155px;
   max-width: 155px;
}

.a-nav {
    margin-right: 4rem;
    color: #ef782d;
    font-size: 20px;
}

.detalle-info {
    font-size: 18px;
    font-weight: 300;
    color: white;
    padding-left: 2rem;
    padding-top: 2rem;
    max-width: 1100px;
    padding-bottom: 3rem;
}

.sticky {
    position: sticky;
    top: 0px;
    z-index: 999;
}

.section-vid {
    width: 100%;
}

.title-video {
    position: absolute;
    top: 20%;
}

.texto-video {
    font-size: 60px;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 2px;
    -webkit-font-smoothing: antialiased;
    color: #ef782d;
}

.video {
    width: 100%;
    height: 600px;
    object-fit: cover;
}

.container {
    width: 1690px;
}

.container-info {
    margin-top: 3rem;
    margin-bottom: 2rem;
    max-width: 1690px;
    width: 100%;
    background-color: #ef782d;
    height: 100%;
    border-radius: 30px;
    position: relative;
    margin-left: 3rem;
    margin-right: 3rem;
}

.container-talents {
    width: 1690px;
    padding-bottom: 2rem;
}

.cospng {
    position: absolute;
    bottom: -1%;
    left: 75%;
}

.titleinfo {
    color: white;
    padding-left: 2rem;
    padding-top: 2rem;
}

.talentostitle {
    color: #d94285;
}

.talento-title-box {
    margin-bottom: 2rem;
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(430px, 430px));
    grid-gap: 20px;
    grid-row-gap: 100px;
    justify-content: center;
}

.talent-box {
    max-width: 430px;
    height: 480px;
    border-radius: 30px;
    background-color: black;
    border: none;
    position: relative;
    width: 100%;
    cursor: pointer;
}

.img-box {
    max-width: 430px;
    width: 100%;
    height: 480px;
    border-radius: 30px;
    border: none;
    background-color:rgba(0,0,0,0.6);
    opacity:1;
    transition: all 0.5s;
}

.name-talent {
    color: #d94285;
    padding-top: 1rem;
}

.flex-center-talents {
    display: flex;
    justify-content: center;
}

.footer {
    margin-top: 5rem;
}

.logo-footer {
    width: 100px;
}

.info-box {
    position: absolute;
    top: 40%;
    left: 3%;
    color: white;
    font-size: 24px;
    font-weight: 300;
    user-select: none;
    pointer-events: none;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.hab1 {
    padding-left: 2rem;
    padding-right: 3rem;
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

.hab2 {
    padding-left: 8rem;
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}


.logoinfo {
    width: 30px;
}

.quant {
    padding-left: 5px;
}

.footer  {
    margin-top: 10rem;
    width: 100%;
    height: 140px;
    background-color: #ef782d;
}
/* 

Animacioness!!! 

*/

.a-nav:hover {
    color: #d94285;
}

.img-box:hover {
    opacity:0.2;
}

.talent-box:hover .hab1,
.talent-box:hover .hab2 {
  opacity: 1;
}

@media (max-width: 600px) {

    .grid {
        grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
    }

    .cospng {
        display: none;
    }
}

